Switch to create-react-app. Fix a bunch of a11y issues. Add gh-pages for easy publishing. On mobile, the menu will now close when selecting a recipe. Before, the menu would stay open and it might not even be obvious the new recipe was being rendered underneath.

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
+.panel-block {cursor: pointer;}
+.panel-block:hover {background-color: whitesmoke;}
 .panel-block.is-active {background-color: whitesmoke; border-left-width: 6px;}
-
 /* make ingredients appear in rightmost column on wider screens. */
 @media(min-width: 768px) {
     #directions-column {order: 1}
